git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1047 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.relations.yml
+++ b/config/locales/fr-FR.pack.relations.yml
@@ -67,6 +67,28 @@ fr-FR:
         string_case: 'Options pour le texte'
       complements_update:
         title: 'Modification du champ personnalisé : {{value}}'
+      configure_mandates: 
+        enter_new_family: 'Saisir une nouvelle famille'
+        enter_new_organization: 'Saisir une nouvelle organisation'
+        enter_new_title: 'Saisir un nouveau titre'
+        title: 'Configuration des responsabilités'
+        families: 'Familles'
+        mandate_family: 'Nouvelle Famille'
+        mandate_organization: 'Nouvelle organisation'
+        mandate_title: 'Nouveau titre'
+        family : 'Famille'
+        former_family: 'Ancienne famille[]'
+        new_family: 'Nouvelle famille'
+        organizations: 'Organisations'
+        organization: 'Organisation'
+        former_organization: 'Ancienne organisation'
+        new_organization: 'Nouvelle organisation'
+        titles: 'Titres' 
+        title: 'Titre'
+        former_title: 'Ancien titre'
+        new_title: 'Nouveau titre'
+        delete: 'Supprimer'
+        validate: 'Valider'
       _coordinates_form:
         address: 'Adresse'
         canals: 'Coordonnées'
@@ -241,6 +263,7 @@ fr-FR:
       index:
         areas: 'Zones postales'
         complements: 'Champs personnalisés'
+        configure_mandates: 'Configurer les responsabilités'
         districts: 'Zones administratives'
         entities: 'Gérer les fiches'
         entities_create: 'Créer une nouvelle fiche'
