git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1048 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -547,6 +547,8 @@ fr-FR:
         select_number_or_date: 'Entrez un numéro ou une date'
         subscription_nature: 'Type d''abonnement'
         title: 'Abonnements'
+      subscriptions_create:
+        title: 'Création d''un abonnement'
       taxes:
         taxes_create: 'Ajouter une nouvelle taxe'
         title: 'Taxes'
