--- a/config/locales/fr-FR.pack.relations.yml
+++ b/config/locales/fr-FR.pack.relations.yml
@@ -67,27 +67,26 @@ fr-FR:
         string_case: 'Options pour le texte'
       complements_update:
         title: 'Modification du champ personnalisé : {{value}}'
-      configure_mandates: 
+      configure_mandates:
+        delete: 'Supprimer'
         enter_new_family: 'Saisir une nouvelle famille'
         enter_new_organization: 'Saisir une nouvelle organisation'
         enter_new_title: 'Saisir un nouveau titre'
-        title: 'Configuration des responsabilités'
         families: 'Familles'
+        family: 'Famille'
+        former_family: 'Ancienne famille[]'
+        former_organization: 'Ancienne organisation'
+        former_title: 'Ancien titre'
         mandate_family: 'Nouvelle Famille'
         mandate_organization: 'Nouvelle organisation'
         mandate_title: 'Nouveau titre'
-        family : 'Famille'
-        former_family: 'Ancienne famille[]'
         new_family: 'Nouvelle famille'
-        organizations: 'Organisations'
-        organization: 'Organisation'
-        former_organization: 'Ancienne organisation'
         new_organization: 'Nouvelle organisation'
-        titles: 'Titres' 
-        title: 'Titre'
-        former_title: 'Ancien titre'
         new_title: 'Nouveau titre'
-        delete: 'Supprimer'
+        organization: 'Organisation'
+        organizations: 'Organisations'
+        title: 'Titre'
+        titles: 'Titres'
         validate: 'Valider'
       _coordinates_form:
         address: 'Adresse'
@@ -178,6 +177,7 @@ fr-FR:
           one: '1 abonnement'
           other: '{{count}} abonnements'
           zero: 'Aucun abonnement'
+        subscriptions_create: 'Ajouter un abonnement'
         title: 'Fiche : {{value}}'
       _entities_form:
         account_client_to_create: '--Créer automatiquement un compte client--'
