--- a/config/locales/fr-FR.pack.relations.yml
+++ b/config/locales/fr-FR.pack.relations.yml
@@ -16,6 +16,7 @@ fr-FR:
       contact_phone: 'Téléphone'
       contact_website: 'Site web'
       entities_natures_delete_permission: 'Vous ne pouvez pas supprimer ce type de fiche, il est rattaché à une ou plusieurs fiches'
+      entity_id: 'Fiche'
       entity_code: 'Code'
       entity_comment: 'Commentaire'
       entity_first_name: 'Prénom'
