--- a/config/locales/fr-FR/help/company-users.txt
+++ b/config/locales/fr-FR/help/company-users.txt
@@ -1,3 +1,4 @@
 h1. Comment consulter la liste des utilisateurs ?
 
-Vous avez accès aux différentes informations relatives à tous les utilisateurs rattachés à votre sosciété.
+Vous avez accès aux différentes informations relatives à tous les utilisateurs rattachés à votre société.
+
