git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1065 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -41,6 +41,7 @@ fr-FR:
         sales_prices_create: 'Créer un nouveau prix de vente'
       purchase_order_lines:
         purchase_order_lines_create: 'Ajouter un produit à la commande'
+      reservoir: 'Réservoir'
       sale_order_lines:
         sale_order_lines_create: 'Ajouter un produit au devis'
       scheduled: 'Échéance'
