git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1073 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.relations.yml
+++ b/config/locales/fr-FR.pack.relations.yml
@@ -118,6 +118,7 @@ fr-FR:
       _entities_contacts_form:
         address: 'Adresse'
         canals: 'Coordonnées'
+        general: 'Général'
         title: 'Description générale'
       entities_contacts_update:
         title: 'Modification de l''adresse de "{{entity}}"'
