--- a/config/locales/fr-FR.pack.company.yml
+++ b/config/locales/fr-FR.pack.company.yml
@@ -90,6 +90,7 @@ fr-FR:
           other: '{{count}} livraisons en attente '
           zero: 'Aucune livraison en attente'
         parameters: 'Paramètres'
+        print_templates: "Modèles d'impression"
         production: 'Gestion de la production'
         relations: 'Gestion des relations clients/fournisseurs'
         resources: 'Gestion des ressources humaines'
@@ -111,6 +112,13 @@ fr-FR:
         title: 'Envoyer un mail pour "{{listing}}"'
       listings_update:
         title: 'Modification de l''extraction {{value}}'
+      print_templates:
+        print_templates_create: 'Créer un modèle d''impression'
+        title: 'Liste des modèles d''impression'
+      print_templates_create:
+        title: 'Création d''un modèle d''impression'
+      print_templates_update:
+        title: 'Modification du modèle d''impression "{{value}}"'
       _rights_form:
         accountancy_rights: 'Droits module Comptabilité'
         company_rights: 'Droits module Société'
