git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1079 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.relations.yml
+++ b/config/locales/fr-FR.pack.relations.yml
@@ -3,6 +3,7 @@ fr-FR:
   controllers:
     relations:
       client: 'Compte client'
+      check_fields: 'Vous devez cocher au moins une case pour effectuer la modification'
       contact_email: 'Email'
       contact_fax: 'Fax'
       contact_line_2: 'Dest-Service'
@@ -28,6 +29,19 @@ fr-FR:
         cannot_merge_entities: 'Une erreur est survenue. Il n''est pas possible de fusionner ces fiches.'
       first_contact: 'Adresse principale'
       import_succeed: 'Vos données ont été correctement importées '
+      no_filters: '--- Pas de filtre ---'
+      begins: 'Commence par'
+      contains: 'Contient'
+      finishes: 'Termine par'
+      is: 'Est'
+      not_is: 'N''est pas'  
+      not_begins: 'Ne commence pas par'
+      not_finishes: 'Ne termine pas par'
+      not_contains: 'Ne contient pas'
+      mandates_filters: 'Vous devez saisir au moins une valeur de recherche pour un des champs'
+      mandates_fields: 'Vous devez saisir au moins une valeur dans l''un des champs'
+      mandates_new_fields: 'Vous devez saisir au moins une valeur dans l''un des champs de modification'
+      need_to_create_mandates_before: 'Vous devez créer des mandats avant'
       second_contact: 'Adresse secondaire'
       supplier: 'Compte fournisseur'
       title: 'Relations'
@@ -68,27 +82,17 @@ fr-FR:
         string_case: 'Options pour le texte'
       complements_update:
         title: 'Modification du champ personnalisé : {{value}}'
-      configure_mandates:
-        delete: 'Supprimer'
-        enter_new_family: 'Saisir une nouvelle famille'
-        enter_new_organization: 'Saisir une nouvelle organisation'
-        enter_new_title: 'Saisir un nouveau titre'
-        families: 'Familles'
-        family: 'Famille'
-        former_family: 'Ancienne famille[]'
-        former_organization: 'Ancienne organisation'
-        former_title: 'Ancien titre'
-        mandate_family: 'Nouvelle Famille'
-        mandate_organization: 'Nouvelle organisation'
-        mandate_title: 'Nouveau titre'
-        new_family: 'Nouvelle famille'
+      mandates_configure:
+        title: 'Configuration des responsabilités'
+        title2: 'Titre'
+        filter: 'Filtre'
+        mandate_new_value: 'Nouvelle valeur'
         new_organization: 'Nouvelle organisation'
         new_title: 'Nouveau titre'
+        new_family: 'Nouvelle famille'    
         organization: 'Organisation'
-        organizations: 'Organisations'
-        title: 'Titre'
-        titles: 'Titres'
-        validate: 'Valider'
+        family: 'Famille'
+        validate: 'Modifier'
       _coordinates_form:
         address: 'Adresse'
         canals: 'Coordonnées'
@@ -265,7 +269,7 @@ fr-FR:
       index:
         areas: 'Zones postales'
         complements: 'Champs personnalisés'
-        configure_mandates: 'Configurer les responsabilités'
+        mandates_configure: 'Configurer les responsabilités'
         districts: 'Zones administratives'
         entities: 'Gérer les fiches'
         entities_create: 'Créer une nouvelle fiche'
