git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1085 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -269,6 +269,7 @@ fr-FR:
         name: 'Nom'
         purchases_journal: 'Journal d''achats'
         sales: 'Ventes'
+        sales_conditions: 'Conditions Générales de Vente'
         sales_journal: 'Journal de Ventes'
         siren: 'Numéro SIREN'
         updated_at: 'Mis à jour le'
