git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1093 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -36,6 +36,7 @@ fr-FR:
       prices:
         purchases_prices_create: 'Enregistrer un nouveau prix d''achat'
         sales_prices_create: 'Enregistrer un nouveau prix de vente'
+      product: 'Produit'
       product_prices:
         purchases_prices_create: 'Créer un nouveau prix d''achat'
         sales_prices_create: 'Créer un nouveau prix de vente'
