git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1098 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.company.yml
+++ b/config/locales/fr-FR.pack.company.yml
@@ -115,6 +115,7 @@ fr-FR:
         title: 'Modification de l''extraction {{value}}'
       document_templates:
         document_templates_create: 'Créer un modèle de document'
+        document_templates_load: 'Charger les modèles par défaut'
         title: 'Liste des modèles de document'
       document_templates_create:
         title: 'Création d''un modèle de document'
