--- a/config/locales/fr-FR.pack.relations.yml
+++ b/config/locales/fr-FR.pack.relations.yml
@@ -2,8 +2,9 @@ fr-FR:
 
   controllers:
     relations:
-      client: 'Compte client'
+      begins: 'Commence par'
       check_fields: 'Vous devez cocher au moins une case pour effectuer la modification'
+      client: 'Compte client'
       contact_email: 'Email'
       contact_fax: 'Fax'
       contact_line_2: 'Dest-Service'
@@ -16,6 +17,7 @@ fr-FR:
       contact_mobile: 'Portable'
       contact_phone: 'Téléphone'
       contact_website: 'Site web'
+      contains: 'Contient'
       entities_natures_delete_permission: 'Vous ne pouvez pas supprimer ce type de fiche, il est rattaché à une ou plusieurs fiches'
       entity_code: 'Code'
       entity_comment: 'Commentaire'
@@ -27,21 +29,19 @@ fr-FR:
       errors:
         cannot_merge_an_entity_with_itself: 'Il n''est pas possible de fusionner une fiche avec elle-même'
         cannot_merge_entities: 'Une erreur est survenue. Il n''est pas possible de fusionner ces fiches.'
+      finishes: 'Termine par'
       first_contact: 'Adresse principale'
       import_succeed: 'Vos données ont été correctement importées '
-      no_filters: '--- Pas de filtre ---'
-      begins: 'Commence par'
-      contains: 'Contient'
-      finishes: 'Termine par'
       is: 'Est'
-      not_is: 'N''est pas'  
-      not_begins: 'Ne commence pas par'
-      not_finishes: 'Ne termine pas par'
-      not_contains: 'Ne contient pas'
-      mandates_filters: 'Vous devez saisir au moins une valeur de recherche pour un des champs'
       mandates_fields: 'Vous devez saisir au moins une valeur dans l''un des champs'
+      mandates_filters: 'Vous devez saisir au moins une valeur de recherche pour un des champs'
       mandates_new_fields: 'Vous devez saisir au moins une valeur dans l''un des champs de modification'
       need_to_create_mandates_before: 'Vous devez créer des mandats avant'
+      no_filters: '--- Pas de filtre ---'
+      not_begins: 'Ne commence pas par'
+      not_contains: 'Ne contient pas'
+      not_finishes: 'Ne termine pas par'
+      not_is: 'N''est pas'
       second_contact: 'Adresse secondaire'
       supplier: 'Compte fournisseur'
       title: 'Relations'
@@ -82,17 +82,6 @@ fr-FR:
         string_case: 'Options pour le texte'
       complements_update:
         title: 'Modification du champ personnalisé : {{value}}'
-      mandates_configure:
-        title: 'Configuration des responsabilités'
-        title2: 'Titre'
-        filter: 'Filtre'
-        mandate_new_value: 'Nouvelle valeur'
-        new_organization: 'Nouvelle organisation'
-        new_title: 'Nouveau titre'
-        new_family: 'Nouvelle famille'    
-        organization: 'Organisation'
-        family: 'Famille'
-        validate: 'Modifier'
       _coordinates_form:
         address: 'Adresse'
         canals: 'Coordonnées'
@@ -269,7 +258,6 @@ fr-FR:
       index:
         areas: 'Zones postales'
         complements: 'Champs personnalisés'
-        mandates_configure: 'Configurer les responsabilités'
         districts: 'Zones administratives'
         entities: 'Gérer les fiches'
         entities_create: 'Créer une nouvelle fiche'
@@ -281,6 +269,7 @@ fr-FR:
         events: 'Évènements'
         import_export: 'Import/Export de fiches'
         mandates: 'Responsabilités'
+        mandates_configure: 'Configurer les responsabilités'
         nb_entities:
           one: '1 fiche client/fournisseur'
           other: '{{count}} fiches clients/fournisseurs'
@@ -298,6 +287,18 @@ fr-FR:
         select_organization: 'Organisation'
         title: 'Responsabilités'
         update_params: 'Modifier la recherche'
+      mandates_configure:
+        column: 'Donnée'
+        column_family: 'Famille'
+        column_organization: 'Organisation'
+        column_title: 'Titre'
+        filter: 'Filtre'
+        mandate_new_value: 'Nouvelle valeur'
+        new_family: 'Nouvelle famille'
+        new_organization: 'Nouvelle organisation'
+        new_title: 'Nouveau titre'
+        title: 'Configuration des responsabilités'
+        validate: 'Modifier'
       mandates_create:
         title: 'Créer une responsabilité'
       mandates_update:
