--- a/config/locales/fr-FR.rights.yml
+++ b/config/locales/fr-FR.rights.yml
@@ -20,6 +20,7 @@ fr-FR:
     create_purchases: 'Créer, modifier des achats'
     extract_listings: 'Effectuer des extractions (sans pouvoir les concevoir)'
     import_export_entities: 'Importer, exporter des fiches clients/fournisseurs'
+    mail_listings: (((MAIL_LISTINGS)))
     manage_accounts: 'Gérer les comptes comptables'
     manage_areas: 'Gérer les zones'
     manage_bank_accounts: 'Gérer les comptes bancaires'
@@ -28,6 +29,8 @@ fr-FR:
     manage_delays: 'Gérer les délais'
     manage_delivery_modes: 'Gérer les types de livraison'
     manage_districts: 'Gérer les districts'
+    manage_document_natures: (((MANAGE_DOCUMENT_NATURES)))
+    manage_document_templates: (((MANAGE_DOCUMENT_TEMPLATES)))
     manage_embankments: 'Gérer les remises de chèques'
     manage_entities: 'Gérer les fiches clients/fournisseurs'
     manage_entities_natures: 'Gérer les types de fiche'
