git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1104 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -555,6 +555,8 @@ fr-FR:
         title: 'Abonnements'
       subscriptions_create:
         title: 'Création d''un abonnement'
+      subscriptions_update:
+        title: 'Modification de "{{value}}" du {{start}} au {{finish}}'
       taxes:
         taxes_create: 'Ajouter une nouvelle taxe'
         title: 'Taxes'
