git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1105 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1338,7 +1338,7 @@ fr-FR:
         entity_id: (((ENTITY_ID)))
         id: 'ID'
         invoiced: (((INVOICED)))
-        label: (((LABEL)))
+        label: 'Produit'
         location_id: 'Lieu de stockage'
         lock_version: 'Version'
         order_id: (((ORDER_ID)))
