--- a/config/locales/fr-FR/help/management-sales.txt
+++ b/config/locales/fr-FR/help/management-sales.txt
@@ -2,9 +2,13 @@ h1. Comment consulter la liste des ventes?
 
 * La liste des ventes répertorie toutes les ventes réalisées a vos différents clients.
 
-* Le numéro est celui de la vente et est un lien vous redirigeant vers le récapitulatif détaillé de la vente.
+* Le numéro de la vente et est un lien vous redirigeant vers l'étape "Produits" de votre vente.
 
 * Le nom du client est un lien vous redirigeant vers la fiche client considérée.
+
+* Les ventes *impayées* ou partiellement payées sont *surlignées en rouge*.
+
+* Vous pouvez supprimer les devis mais pas les ventes passées en commande.
 
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
